[package]
name = "mediaproxy-common"
version = "0.1.1"
authors = ["Åke Amcoff <ake.amcoff@gmail.com>"]
edition = "2018"
description = "Common files for the Media Proxy project."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.12"
custom_error = "1.7"
